add swag docs for routes
